[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites and Tilesets/32x32 square.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enemy/PatrolEnemyBase.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69, 32 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="WatchRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WatchRadius"]
position = Vector2( 59, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="WatchRadius" to="." method="_on_WatchRadius_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
